--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "express-session": "^1.17.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.12"
+  },
+  "engines": {
+    "node": "14.17.0",
+    "npm": "7.20.6"
   }
 }
